--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body{
   font-family: Arial, Helvetica, sans-serif;
 }
 
+ p{
+    font-size:30px;
+     background-color:#9494b8;
+}
 h1{
     color:black;
     font-size:45px;
