--- a/style.css
+++ b/style.css
@@ -1,14 +1,81 @@
-body{
-    background-color:#cce6ff;
-    margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+header {
+    font-size: 30px;
+    font-family: American Typewriter;
+    /*background-color:#9494b8;*/
 }
 
- p{
-    font-size:30px;
-     background-color:#9494b8;
+.code{
+    font-family: American Typewriter;
 }
-h1{
-    color:black;
-    font-size:45px;
+.w3-tag{
+    font-family: American Typewriter;
+
+}
+
+.w3-xxxlarge{
+    font-family: American Typewriter;
+
+}
+
+.bar{
+    font-size:30px;
+    color: white;
+    background-color:black;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.projects{
+    width: 100%;
+    height: 650px;
+}
+
+.writings{
+    width: 100%;
+    height: 650px;
+}
+
+.contact{
+    font-family: American Typewriter;
+}
+
+.heading{
+    font-family: American Typewriter;
+}
+.email{
+    font-family: American Typewriter;
+}
+.phone{
+    font-family: American Typewriter;
+}
+.container {
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+.myprojects {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: American Typewriter;
+    font-size:60px;
+    color: black;
+    background-color: white;
+}
+
+.my_writings {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: American Typewriter;
+    font-size:60px;
+    color: white;
+    background-color: black;
+
 }
